--- a/crud_mern_stack/package.json
+++ b/crud_mern_stack/package.json
@@ -10,11 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "aos": "^2.3.4",
     "axios": "^1.5.0",
     "bootstrap": "^5.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
+    "sweetalert2": "^11.7.27",
     "uniqid": "^5.4.0"
   },
   "devDependencies": {
